--- a/HAMZA_PFE/Views/Windows/MainWindow.xaml
+++ b/HAMZA_PFE/Views/Windows/MainWindow.xaml
@@ -30,7 +30,7 @@
             Grid.Row="0"
             CloseWindowByDoubleClickOnIcon="True">
             <ui:TitleBar.Icon>
-                <ui:ImageIcon Source="pack://application:,,,/Assets/wpfui-icon-256.png" />
+                <ui:ImageIcon Source="pack://application:,,,/Assets/cyber-security-icon.png" />
             </ui:TitleBar.Icon>
         </ui:TitleBar>
 
