--- a/HAMZA_PFE/Views/Pages/Protection.xaml
+++ b/HAMZA_PFE/Views/Pages/Protection.xaml
@@ -9,13 +9,49 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Protection">
 
-    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-
-        <ui:Card HorizontalAlignment="Left" Margin="83,38,0,0" Height="138" Width="112" VerticalAlignment="Top">
-            <ui:Button Content="Button" VerticalAlignment="Top"/>
+    <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Height="323" Width="780">
+        <ui:Card HorizontalAlignment="Left" Margin="50,50,0,0" Height="114" Width="201" VerticalAlignment="Top">
+            <StackPanel Width="176" Height="82">
+                <Button Content="Quick Scan" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center"/>
+                <TextBlock Text="Quick scan for your device." TextWrapping="Wrap" FontSize="12" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+            </StackPanel>
         </ui:Card>
-        <ui:Card Content="Custom Scan" HorizontalAlignment="Left" Margin="576,38,0,0" VerticalAlignment="Top" Height="138" Width="112"/>
-        <ui:Card Content="Full Scan" HorizontalAlignment="Left" Margin="318,38,0,0" VerticalAlignment="Top" Height="138" Width="112"/>
+
+        <ui:Card HorizontalAlignment="Left" Margin="284,50,0,0"  Height="114" Width="201" VerticalAlignment="Top">
+            <StackPanel Width="176" Height="84">
+                <Button Content="Full Scan" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center"/>
+                <TextBlock Text="Scan your full device." TextWrapping="Wrap" FontSize="12" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+            </StackPanel>
+        </ui:Card>
+
+        <ui:Card HorizontalAlignment="Left" Margin="521,50,0,0"  Height="114" Width="201" VerticalAlignment="Top">
+            <StackPanel Height="84" Width="172">
+                <Button Content="Selective Scan" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center"/>
+                <TextBlock Text="Select a specific file or folder to scan." TextWrapping="Wrap" FontSize="12" HorizontalAlignment="Center" Margin="0,5,0,0" Height="46"/>
+            </StackPanel>
+        </ui:Card>
+
+        <ui:Card VerticalAlignment="Stretch" Margin="284,193,295,26" >
+            <StackPanel Height="77" Margin="0,0,-1,0">
+                <TextBlock Text="HAMZA" TextWrapping="Wrap" FontSize="12" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+                <ui:ToggleSwitch HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,10,0,0"/>
+            </StackPanel>
+        </ui:Card>
+
+        <ui:Card  VerticalAlignment="Top" Margin="521,193,58,0" Height="104">
+            <StackPanel Height="70">
+                <TextBlock Text="HAMZA " TextWrapping="Wrap" FontSize="12" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+                <ui:ToggleSwitch HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,10,0,0"/>
+            </StackPanel>
+        </ui:Card>
+
+        <ui:Card VerticalAlignment="Top" Margin="50,193,529,0" Height="104" >
+            <StackPanel Height="77" Margin="0,0,3,0">
+                <TextBlock Text="HAMZA" TextWrapping="Wrap" FontSize="12" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+                <ui:ToggleSwitch HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,10,0,0"/>
+            </StackPanel>
+        </ui:Card>
 
     </Grid>
+
 </Page>
