--- a/HAMZA_PFE/Views/Pages/Protection.xaml
+++ b/HAMZA_PFE/Views/Pages/Protection.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<Page xmlns:Dialogs="clr-namespace:HAMZA_PFE.Dialogs" 
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,10 +6,14 @@
       xmlns:local="clr-namespace:HAMZA_PFE.Views.Pages"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" x:Class="HAMZA_PFE.Views.Pages.Protection"
       mc:Ignorable="d" 
+      xmlns:materialDesign="https://materialdesigninxaml.net/winfx/xaml/themes"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Protection">
 
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Height="323" Width="780">
+        
+      
+
         <ui:Card HorizontalAlignment="Left" Margin="50,50,0,0" Height="114" Width="201" VerticalAlignment="Top">
             <StackPanel Width="176" Height="82">
                 <Button Content="Quick Scan" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Click="Button_Click"/>
