--- a/HAMZA_PFE/Dialogs/QuickScanDialog.xaml
+++ b/HAMZA_PFE/Dialogs/QuickScanDialog.xaml
@@ -9,36 +9,32 @@
         mc:Ignorable="d"
         Title="Quick Scan" 
         WindowStyle="None"
-        SizeToContent="WidthAndHeight"
-        ResizeMode="NoResize"
-        ShowInTaskbar="False"
-        WindowStartupLocation="CenterOwner" 
-        Height="139" Width="542"
+        WindowStartupLocation="CenterScreen" 
+        Height="201"
+        Width="530"
         Focusable="True"
         ExtendsContentIntoTitleBar="True"
         ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
         ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
         Foreground="{DynamicResource TextFillColorPrimaryBrush}"
         WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
+        WindowCornerPreference="Round" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" ShowInTaskbar="False" ResizeMode="NoResize"
         >
-    <Grid Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="335*"/>
-            <ColumnDefinition Width="187*"/>
-        </Grid.ColumnDefinitions>
+    <Grid HorizontalAlignment="Center" Margin="10,10,10,10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-
-        <Label Content="Quick Scan" Margin="0,0,261,92" FontWeight="Bold"/>
-        <StackPanel Orientation="Horizontal" Margin="59,82,7,0" Height="40" VerticalAlignment="Top" Grid.Column="1">
+        <Label Content="Quick Scan" FontWeight="Bold" HorizontalAlignment="Left" Width="96" Height="27" VerticalAlignment="Top" FontSize="36"/>
+        <StackPanel Orientation="Horizontal" Margin="0,130,12,0" Height="40" VerticalAlignment="Top" Grid.Column="1" HorizontalAlignment="Right" Width="119">
             <Button x:Name="okButton" IsDefault="True" Content="Start"/>
             <Button x:Name="cancelButton" IsCancel="True" Content="Cancel" Width="64"/>
         </StackPanel>
-        <ProgressBar HorizontalAlignment="Center" Height="22" Margin="0,32,0,0" VerticalAlignment="Top" Width="522" Value="20" Cursor="" Grid.ColumnSpan="2"/>
-        <Label Content="Time estimation:" HorizontalAlignment="Left" Margin="323,59,0,0" VerticalAlignment="Top" Width="107" Grid.ColumnSpan="2"/>
-        <Label Content="10min" HorizontalAlignment="Left" Margin="100,59,0,0" VerticalAlignment="Top" Width="76" FontWeight="Bold" Grid.Column="1"/>
-        <Label Content="Scaning:" HorizontalAlignment="Left" Margin="10,59,0,0" VerticalAlignment="Top"/>
-        <Label Content="FileX1.ff" HorizontalAlignment="Left" Margin="67,59,0,0" VerticalAlignment="Top" Width="86"/>
+        <ProgressBar x:Name="Progress" HorizontalAlignment="Center" Height="39" Margin="0,32,0,0" VerticalAlignment="Top" Width="510" Value="20" Cursor=""/>
+        <Label Content="Time estimation:" HorizontalAlignment="Left" Margin="324,90,0,0" VerticalAlignment="Top" Width="102"/>
+        <Label x:Name="TimeEstimation"  Content="10min" HorizontalAlignment="Left" Margin="431,90,0,0" VerticalAlignment="Top" Width="76" FontWeight="Bold"/>
+        <Label Content="Scaning:" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="FileEnScan" Content="..........." HorizontalAlignment="Left" Margin="67,90,0,0" VerticalAlignment="Top" Width="86"/>
 
     </Grid>
 </ui:FluentWindow>
