--- a/HAMZA_PFE/Dialogs/QuickScanDialog.xaml
+++ b/HAMZA_PFE/Dialogs/QuickScanDialog.xaml
@@ -27,7 +27,7 @@
 
         <Label Content="Quick Scan" FontWeight="Bold" HorizontalAlignment="Left" Width="96" Height="27" VerticalAlignment="Top" FontSize="36"/>
         <StackPanel Orientation="Horizontal" Margin="0,130,12,0" Height="40" VerticalAlignment="Top" Grid.Column="1" HorizontalAlignment="Right" Width="119">
-            <Button x:Name="okButton" IsDefault="True" Content="Start"/>
+            <Button x:Name="okButton" IsDefault="True" Content="Start" Click="StartScan"/>
             <Button x:Name="cancelButton" IsCancel="True" Content="Cancel" Width="64"/>
         </StackPanel>
         <ProgressBar x:Name="Progress" HorizontalAlignment="Center" Height="39" Margin="0,32,0,0" VerticalAlignment="Top" Width="510" Value="20" Cursor=""/>
