--- a/HAMZA_PFE/Views/Pages/DashboardPage.xaml
+++ b/HAMZA_PFE/Views/Pages/DashboardPage.xaml
@@ -79,7 +79,7 @@
                      />
                 <ui:Button
                     Margin="0,10,0,0"
-                    Content="Update"
+                    Content="Search for Updates"
                     Icon="Fluent24"
                     />
             </StackPanel>
