--- a/HAMZA_PFE/Dialogs/QuickScanDialog.xaml
+++ b/HAMZA_PFE/Dialogs/QuickScanDialog.xaml
@@ -1,40 +1,69 @@
 ﻿<ui:FluentWindow
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HAMZA_PFE.Dialogs"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" 
-        x:Class="HAMZA_PFE.Dialogs.QuickScanDialog"
-        mc:Ignorable="d"
-        Title="Quick Scan" 
-        WindowStyle="None"
-        WindowStartupLocation="CenterScreen" 
-        Height="201"
-        Width="530"
-        Focusable="True"
-        ExtendsContentIntoTitleBar="True"
-        ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
-        ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" ShowInTaskbar="False" ResizeMode="NoResize"
-        >
-    <Grid HorizontalAlignment="Center" Margin="10,10,10,10">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:HAMZA_PFE.Dialogs"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    x:Class="HAMZA_PFE.Dialogs.QuickScanDialog"
+    mc:Ignorable="d"
+    Title="Quick Scan"
+    WindowStyle="None"
+    WindowStartupLocation="CenterScreen"
+    Height="400" 
+    Width="550"
+    ResizeMode="NoResize"
+    ShowInTaskbar="False"
+    HorizontalAlignment="Center"
+    VerticalAlignment="Center"
+    WindowBackdropType="Mica"
+    WindowCornerPreference="Round"
+    ExtendsContentIntoTitleBar="True"
+    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
+    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    Foreground="{DynamicResource TextFillColorPrimaryBrush}">
+
+    <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <!-- Added for ListBox -->
         </Grid.RowDefinitions>
 
-        <Label Content="Quick Scan" FontWeight="Bold" HorizontalAlignment="Left" Width="96" Height="27" VerticalAlignment="Top" FontSize="36"/>
-        <StackPanel Orientation="Horizontal" Margin="0,130,12,0" Height="40" VerticalAlignment="Top" Grid.Column="1" HorizontalAlignment="Right" Width="119">
-            <Button x:Name="okButton" IsDefault="True" Content="Start" Click="StartScan"/>
-            <Button x:Name="cancelButton" IsCancel="True" Content="Cancel" Width="64"/>
-        </StackPanel>
-        <ProgressBar x:Name="Progress" HorizontalAlignment="Center" Height="39" Margin="0,32,0,0" VerticalAlignment="Top" Width="510" Value="20" Cursor=""/>
-        <Label Content="Time estimation:" HorizontalAlignment="Left" Margin="324,90,0,0" VerticalAlignment="Top" Width="102"/>
-        <Label x:Name="TimeEstimation"  Content="10min" HorizontalAlignment="Left" Margin="431,90,0,0" VerticalAlignment="Top" Width="76" FontWeight="Bold"/>
-        <Label Content="Scaning:" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="FileEnScan" Content="..........." HorizontalAlignment="Left" Margin="67,90,0,0" VerticalAlignment="Top" Width="86"/>
+        <!-- Title -->
+        <Label Content="Quick Scan" FontWeight="Bold" FontSize="28" HorizontalAlignment="Center"/>
 
+        <!-- Scanning Status -->
+        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="10">
+            <Label Content="Scanning:" FontWeight="Bold"/>
+            <Label x:Name="FileEnScan" Content="Waiting..." Foreground="Blue"/>
+        </StackPanel>
+
+        <!-- Progress Bar -->
+        <ProgressBar x:Name="Progress" Grid.Row="2" Height="20" Width="500" Margin="10"/>
+
+        <!-- Time Estimation -->
+        <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="10">
+            <Label Content="Estimated Time:" FontWeight="Bold"/>
+            <Label x:Name="TimeEstimation" Content="Calculating..." Foreground="DarkGreen"/>
+        </StackPanel>
+
+        <!-- ListBox to display scanned files -->
+        <ListBox x:Name="ScannedFilesListBox" Grid.Row="4" Margin="10" Height="150">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
+        <!-- Buttons -->
+        <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
+            <Button x:Name="okButton" Content="Start" Width="75" Click="StartScan"/>
+            <Button x:Name="cancelButton" Content="Cancel" Width="75" Click="CloseDialog" Margin="5,0,0,0"/>
+        </StackPanel>
     </Grid>
 </ui:FluentWindow>
