--- a/HAMZA_PFE/Views/Pages/Protection.xaml
+++ b/HAMZA_PFE/Views/Pages/Protection.xaml
@@ -1,12 +1,11 @@
-﻿<Page xmlns:Dialogs="clr-namespace:HAMZA_PFE.Dialogs" 
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:HAMZA_PFE.Views.Pages"
-      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" x:Class="HAMZA_PFE.Views.Pages.Protection"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+      x:Class="HAMZA_PFE.Views.Pages.Protection"
       mc:Ignorable="d" 
-      xmlns:materialDesign="https://materialdesigninxaml.net/winfx/xaml/themes"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Protection">
 
